--- a/style.css
+++ b/style.css
@@ -1,5 +1,182 @@
 /* font-family: 'Montserrat', sans-serif;
+font-family: 'PT Sans', sans-serif;
+font-family: 'PT Sans Narrow', sans-serif;
 font-family: 'Roboto', sans-serif; */
-h1 {
-  font: "Roboto", sans-serif;
+
+:root {
+  --base-color: #00183e;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: var(--base-color);
+  color: white;
+}
+.firstpage {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+}
+.firstpage h1 {
+  font-size: 50px;
+  text-align: center;
+}
+.firstpage p {
+  text-align: justify;
+  text-justify: auto;
+}
+/* .nopad {
+  padding-right: -15px;
+  margin-right: -15px;
+} */
+.blueimg {
+  filter: brightness(105%);
+  -webkit-filter: brightness(105%);
+  -moz-filter: sepia(25%) blur(1px) brightness(105%);
+  height: 80%;
+}
+
+.secondpage {
+  color: var(--base-color);
+  background-color: white;
+  padding-left: -20px;
+  padding-right: -20px;
+}
+
+.secondpage h2 {
+  font-size: 45px;
+  margin-bottom: 0px;
+  font-weight: 700;
+}
+.thirdpage h2 {
+  font-size: 45px;
+  margin-bottom: 0px;
+  font-weight: 700;
+}
+.secondpage p {
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+.step {
+  font-size: 28px;
+  font-weight: 700;
+  text-align: center;
+  position: relative;
+  left: 5px;
+  max-width: 50%;
+  margin-bottom: 10px;
+}
+
+.stepIcon1 {
+  position: relative;
+  left: 10px;
+}
+.stepIcon2 {
+  position: relative;
+  left: 14px;
+}
+.stepIcon3 {
+  position: relative;
+  left: 16px;
+}
+.stepIcon4 {
+  position: relative;
+  left: 15px;
+}
+.step1 {
+  position: relative;
+  left: -12px;
+}
+.step2 {
+  position: relative;
+  left: -5px;
+}
+.step3 {
+  position: relative;
+  left: 12px;
+}
+.step4 {
+  position: relative;
+  left: 8px;
+}
+.number {
+  position: relative;
+  right: -15px;
+  width: 60px;
+  margin-bottom: 15px;
+}
+.steps {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.stepIcon {
+  width: 60px;
+  margin-bottom: 80px;
+}
+
+@media (max-width: 400px) {
+  .secondpage p {
+    font-size: 15px;
+    margin-bottom: 0px;
+    text-align: left;
+  }
+  .secondpage h2 {
+    font-size: 24px;
+
+    font-weight: 700;
+  }
+  .thirdpage h2 {
+    font-size: 24px;
+
+    font-weight: 700;
+  }
+  .firstpage p {
+    padding-left: 27px;
+  }
+
+  .number {
+    position: relative;
+    right: 0px;
+    width: 40px;
+    margin-bottom: 15px;
+  }
+  .step1 {
+    position: relative;
+    left: -5px;
+  }
+  .step2 {
+    position: relative;
+    left: -5px;
+  }
+  .step3 {
+    position: relative;
+    left: 0px;
+  }
+  .step4 {
+    position: relative;
+    left: 0;
+  }
+  .stepIcon1 {
+    position: relative;
+    left: 4px;
+  }
+  .stepIcon2 {
+    position: relative;
+    left: 0px;
+  }
+  .stepIcon3 {
+    position: relative;
+    left: 0px;
+  }
+  .stepIcon4 {
+    position: relative;
+    left: 7px;
+  }
+  .stepIcon {
+    margin-bottom: 50px;
+  }
 }
