--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ font-family: 'Roboto', sans-serif; */
 :root {
   --base-color: #00183e;
   --light-color: #64bbf9;
-  --dark-color:#252E80
+  --dark-color: #252e80;
 }
-h2{
+h2 {
   font-size: 45px;
 }
 body {
@@ -16,17 +16,15 @@ body {
   background-color: var(--base-color);
   color: white;
 }
-p{
-
+p {
   text-align: justify;
   text-justify: inter-word;
-
 }
 .firstpage {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-    background: url(/images/1stpage.png) no-repeat center center fixed;
+  background: url(/images/1stpage.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -87,7 +85,7 @@ p{
   font-size: 20px;
   margin-bottom: 0px;
 }
-.secondpage img{
+.secondpage img {
   width: 90px;
 }
 .step {
@@ -98,7 +96,7 @@ p{
   left: 5px;
   max-width: 50%;
   margin-bottom: 10px;
-  color: white
+  color: white;
 }
 .stepsec {
   font-size: 28px;
@@ -108,7 +106,7 @@ p{
   left: 5px;
   max-width: 50%;
   margin-bottom: 10px;
-  color: var(--dark-color)
+  color: var(--dark-color);
 }
 
 .stepIcon1 {
@@ -163,7 +161,6 @@ p{
   width: 60px;
   margin-bottom: 80px;
   padding-top: 30px;
-
 }
 
 @media (max-width: 400px) {
@@ -251,7 +248,6 @@ p{
   padding-bottom: 200px;
 }
 .furthpage {
-
   padding-bottom: 150px;
 }
 .cols {
@@ -299,26 +295,22 @@ p{
 }
 .fif {
   font-size: 30px;
-  border-color: #252E80
+  border-color: #252e80;
   border-width: 5px;
   border-style: solid;
   border-radius: 10px;
   font-weight: 600;
-  color:#252E80;
+  color: #252e80;
   margin: 20px 50px 20px 50px;
- 
-  
 }
-@media (max-width:1000px){
-  .fif{
-     font-size: 24px;
+@media (max-width: 1000px) {
+  .fif {
+    font-size: 24px;
   }
 
-.number {
-
-  width: 10px;
-
-}
+  .number {
+    width: 10px;
+  }
 }
 .sameh1 {
   display: table; /* Make the container element behave like a table */
@@ -330,8 +322,8 @@ p{
   width: 40%;
 }
 .child2 {
-  display: table-cell; 
-  
+  display: table-cell;
+
   width: 30%;
   margin: 0 auto;
 }
@@ -340,36 +332,60 @@ p{
   font-size: 30px;
 }
 
-.img5{
-  width:300px
-  margin:0 auto;
+.img5 {
+  margin: 0 auto;
 }
-.six1{
- 
+/* .six1 {
   text-align: center;
- 
+
   justify-content: space-evenly;
-    background: url(/images/61.png) no-repeat center center fixed;
+  background: url(/images/61.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-.six2{
- 
-    text-align: center;
+.six2 {
+  text-align: center;
   display: flex;
   justify-content: space-evenly;
-    background: url(/images/62.jpg) no-repeat center center fixed;
+  background: url(/images/62.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+.sixPage p {
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 200%;
+}
+.sixPage h2 {
+  font-size: 36px;
+  text-align: left;
+}
+.sevenPage h2 {
+  font-size: 36px;
+  text-align: left;
+  color: #bde6fd;
+}
+.sevenPage {
+  text-align: center;
+
+  justify-content: space-evenly;
+  background: url(/images/61.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-.sixPage p{
- 
-  text-align: justify;
-  text-justify: inter-word;
+.sixPage {
+  text-align: center;
 
+  justify-content: space-evenly;
+  background: url(/images/61.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
