--- a/style.css
+++ b/style.css
@@ -616,7 +616,7 @@ footer {
   margin: 0 10px 10px 10px;
   font-size: 30px;
 }
-footer a {
+.foota {
   text-decoration: none;
 
   font-size: 24px;
